--- a/Style/effects/_projects.scss
+++ b/Style/effects/_projects.scss
@@ -1,4 +1,5 @@
 @import "colors";
+
 .light {
   position:relative;
   }
@@ -122,13 +123,13 @@
   overflow-y: scroll;
   background: repeating-linear-gradient(0deg, rgb(255, 255, 255) 0px, #111 1px, transparent 2px, transparent 5px);
   background-size:100% 5px;
-  animation: lines 2s ease-out infinite;
+  animation: lines 5s ease-out infinite;
   // mix-blend-mode: color-burn;
   width: 1000px;
   height: 400px;
-  // &.hidden{
-  //   visibility: hidden;
-  // }
+  &.hidden{
+    visibility: hidden;
+  }
   z-index: 1000;
 }
 
@@ -145,7 +146,7 @@
   
 }
 
-.background-color{
+.project-color{
   position: absolute;
   top:0;
   left:0;
@@ -154,7 +155,7 @@
   z-index: -5;
   width: 100%;
   height: 800px;
-  background: linear-gradient(0.25turn, #102cce, rgba(63, 82, 255, 0.3),  rgba(63, 82, 255, 0.3), #102cce);
+  background: linear-gradient(0.25turn, #031ba3, rgba(63, 82, 255, 0.3),  rgba(63, 82, 255, 0.3), #031ba3);
 }
 .row {
   display: flex;
@@ -163,13 +164,21 @@
   height: 75%;
 }
 
-.column {
+.columnproject {
   margin: 0 auto;
   width: 100%;
   height: 100%;
+  &.hidden{
+    visibility: hidden;
+    height: 0;
+    width: 0;
+  }
 }
+
+
+
 .project-title {
-  margin: 0 auto;
+  margin: 10px auto;
   font-family: "Exo 2";
   font-size: 25px;
   color: $primary-color;
@@ -182,6 +191,7 @@
   height: 30px;
   background-image: url(../../assets/Xclose.png);
   background-size: cover;
+  border: 1px solid $primary-color;
 }
 
 #quizzdom{
@@ -212,7 +222,7 @@
   border-radius: 10px;
   width: 90%;
   height: 90%;
-
+  background: url("/assets/projects/find a pair.PNG");
 }
 
 #left-arrow-bottom{
@@ -233,6 +243,29 @@
     background: $secondary-color;  
     transform: rotate(130deg);
 }
+.competence-text{
+  font-family: "Exo 2";
+  color: $primary-color;
+  font-weight: bold;
+  font-size: 25px;
+  z-index: 200;
+}
+svg{
+  position: relative;
+  width: 150px;
+  height: 150px;
+  z-index: 1000;
+}
+
+svg circle {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke: #191919;
+  stroke-width: 10;
+  stroke-linecap: round;
+}
+
 
 @keyframes animated-text3{
     from{width: 0;}
