--- a/Style/effects/_about.scss
+++ b/Style/effects/_about.scss
@@ -5,7 +5,7 @@
     overflow: scroll;
 }
 #bgabout{
-    background-image: url(../../assets/backgrounds/aboutbg4.jpg);
+    background-image: url(../assets/backgrounds/aboutbg4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -15,7 +15,7 @@
     position: absolute;
     z-index: -100;
 }
-
+// Container About handles all the sections within it
 .container-about {
     position: absolute;
     display: flex;
@@ -36,12 +36,11 @@
   top: -50%;
   left: -50%;
   z-index: 10;
-  background: url(../../assets/backgrounds/moonwolf.PNG) ;
+  background: url(../assets/backgrounds/moonwolf.PNG) ;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: scroll;
   background-position: center;
-    // margin: 0 25px;
     transition: transform 2s ease-in-out 500ms;
     position: absolute;
     overflow: hidden;
@@ -59,12 +58,11 @@
   height: 200%;
   top: -50%;
   left: -50%;
-  background: url(../../assets/backgrounds/about-BG2.png) ;
+  background: url(../assets/backgrounds/about-BG2.png) ;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-    // margin: 0 25px;
     transition: transform 2s ease-in-out 250ms;
     position: absolute;
     overflow: hidden;
@@ -72,7 +70,7 @@
 }
 
 #section3bg{
-    background: url(../../assets/backgrounds/contactme.jpg);
+    background: url(../assets/backgrounds/contactme.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -182,7 +180,7 @@
 }
 
 
-
+// This handles the Div within the about container 
 .skewed-container{
     background-color: rgba(0, 60, 255, 0.5);
     width: 250px;
@@ -198,6 +196,7 @@
     overflow-y: auto;
  
   }
+  //Section 1 
     &:nth-child(1){
        transform: skewX(25deg);
       transition: width 2s ease-in-out 50ms;
@@ -227,6 +226,7 @@
         }
       }
     }
+    // section 2
     &:nth-child(2){
       width: 350px;
       margin: 0 -10px;
@@ -257,6 +257,7 @@
         }
       }
     }
+    // Section 3
     &:nth-child(3){
       transform: skewX(-25deg);
       transition: width 2s;
@@ -289,6 +290,8 @@
       }
     }
 }
+
+// Resposive starts here
 
 @media (max-width: 900px){
   .skewed-container{
